# RiceCall

./: .env.example  .gitignore  Cargo.toml  README.md  db.js  electron-builder.json  index.js  initial.js  main.js  main.ts  package.json  tranform-pwd.js  transform-db.js  transform-pwd.js  tsconfig.electron.json  tsconfig.json
__tests__/: _testSetup.js
__tests__/socket/: channel.test.js  friend.test.js  friendApplication.test.js  friendGroup.test.js  index.test.js  member.test.js  memberApplication.test.js  message.test.js  rtc.test.js  server.test.js  user.test.js
build_deb/: after-install.sh
events/badge-obtain/: config.json  index.js
events/double-xp/: config.json  index.js
schemas/: schema.sql
scripts/: add_events_tables.sql  events-manager.js  transferImageToWebp.ts
socket/: channel.js  member.js  memberApplication.js  message.js  rtc.js  server.js  user.js
src/: error.ts  index.ts  main.rs
src/app/: layout.tsx  page.tsx
src/components/: BadgeInfoCard.tsx  ContextMenu.tsx  MediasoupDemo.tsx  UserInfoCard.tsx
src/config/: app.config.ts  db.config.ts  index.ts  jwt.config.ts  server.config.ts
src/database/: database_connection.rs  database_utils.rs  index.ts  mod.rs  set.rs
src/middleware/: auth.validator.ts  data.validator.ts
src/models/: badges.rs  channels.rs  friend_applications.rs  member_applications.rs  members.rs  messages.rs  user_servers.rs
src/providers/: ContextMenu.tsx  Mediasoup.tsx  Socket.tsx  WebRTC.tsx
src/services/: api.service.ts  auth.service.ts  ipc.service.ts
src/styles/: badgeInfoCard.module.css  (+6 more)
utils/: xp.js
(+163 files in other folders)
