[package]
name = "RiceCall-dev"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
serde = "1.0.219"
sqlx = { version = "0.8.5", features = ["mysql", "runtime-tokio"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
argon2 = "0.5.3"
regex = "1.11.1"
dotenv = "0.15.0"
